--- a/CoffeeTamins.css
+++ b/CoffeeTamins.css
@@ -85,12 +85,12 @@ section{
 }
 
 .header .logo img{
-    height: 6rem;
+    height: 10rem;
 }
 
 .header .navbar a{
     margin:0 1rem;
-    font-size: 1.6rem;
+    font-size: 2rem;
     color:#fff;
 }
 
@@ -199,6 +199,7 @@ section{
     color:var(--main-color);
 }
 
+
 .header .cart-items-container .btn{
     width: 100%;
     text-align: center;
@@ -211,6 +212,7 @@ section{
     background:url("Picture\ album/Body-Background.jpg") no-repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .home .content{
@@ -239,7 +241,9 @@ section{
     background:var(--kuro);
     flex-wrap: wrap;
 }
-
+.about .row span{
+    color: var(--main-color);
+}
 .about .row .image{
     flex:1 1 45rem;
 }
@@ -258,11 +262,13 @@ section{
 }
 
 .about .row .content p{
-    font-size: 1.6rem;
+    font-size: 2rem;
     color:#ccc;
     padding:1rem 0;
     line-height: 1.8;
 }
+/* About us learn more */
+
  /* ------------------------------menu----------------- */
 .menu .box-container{
     display: grid;
@@ -277,7 +283,7 @@ section{
 }
 
 .menu .box-container .box img{
-    height: 10rem;
+    height: 25rem;
 }
 
 .menu .box-container .box h3{
@@ -402,61 +408,62 @@ section{
     text-transform: none;
     background:none;
 }
-/* --------------Blogs------------------------ */
-.blogs .box-container{
+/* --------------News------------------------ */
+.news .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap:1.5rem;
 }
 
-.blogs .box-container .box{
+.news .box-container .box{
     border:var(--border);    
 }
 
-.blogs .box-container .box .image{
+.news .box-container .box .image{
     height: 25rem;
     overflow:hidden;
     width: 100%;
 }
 
-.blogs .box-container .box .image img{
+.news .box-container .box .image img{
     height: 100%;
     object-fit: cover;
     width: 100%;
 }
 
-.blogs .box-container .box:hover .image img{
+.news .box-container .box:hover .image img{
     transform: scale(1.2);
 }
 
-.blogs .box-container .box .content{
+.news .box-container .box .content{
     padding:2rem;
 }
 
-.blogs .box-container .box .content .title{
+.news .box-container .box .content .title{
     font-size: 2.5rem;
     line-height: 1.5;
     color:#fff;
 }
 
-.blogs .box-container .box .content .title:hover{
+.news .box-container .box .content .title:hover{
     color:var(--main-color);
 }
 
-.blogs .box-container .box .content span{
+.news .box-container .box .content span{
     color:var(--main-color);
     display: block;
     padding-top: 1rem;
     font-size: 2rem;
 }
 
-.blogs .box-container .box .content p{
+.news .box-container .box .content p{
     font-size: 1.6rem;
     line-height: 1.8;
     color:#ccc;
     padding:1rem 0;
 }
 
+/* -----------Footer----------- */
 .footer{
     background:var(--kuro);
     text-align: center;
